@@ -15,6 +15,7 @@
 #include "ISceneManager.h"
 #include "CSkinnedMesh.h"
 #include "IReadFile.h"
+#include "irrMath.h"
 
 namespace irr
 {
@@ -53,6 +54,7 @@ private:
 		SB3dChunk(const SB3dChunkHeader& header, long sp)
 			: length(header.size+8), startposition(sp)
 		{
+			length = core::max_(length, 8);
 			name[0]=header.name[0];
 			name[1]=header.name[1];
 			name[2]=header.name[2];
